Updated color scheme for game and keyboard (kind of digging it now). Fixed layout issues where game was no longer fitting horizonally or vertically on mobile screens (keyboard was set to min-content and the keyboard keys were too wide to ever fit in a 375px mobile screen); still not perfect but at least it fits for now. Also reduced width of error alert rectangle so it doesnt take up the full width on small mobile screens (had to reduce font size as well)

--- a/keyboard.css
+++ b/keyboard.css
@@ -3,6 +3,8 @@ div.keyboard {
 	flex-direction: column;
 	gap: 0.375em;
 	width: 100%;
+	background-color: #364954;
+	padding-block: 0.5rem;
 }
 
 div.keyboard > div.keyboard-row {
@@ -12,14 +14,14 @@ div.keyboard > div.keyboard-row {
 }
 
 div.keyboard > div.keyboard-row > button.keyboard-key {
-	min-width: 2.5rem;
-	min-height: 3.5rem;
+	min-width: 2rem;
+	min-height: 2.75rem;
 	border: transparent;
 	border-radius: 4px;
-	background-color: #888;
-	font-size: 1.25rem;
+	background-color: #536672;
+	font-size: 1rem;
 	font-weight: bold;
-	color: #fff;
+	color: white;
 	cursor: pointer;
 }
 
